--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -1,3 +1,11 @@
-body {
-  background-color: gray;
+body,
+html {
+  height: 100%;
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
 }
