--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,15 +1,11 @@
-{% load static %}
+{% extends "base.html" %} 
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend</title>
-  </head>
-  <body>
-    <h1>Bem-vindo ao Frontend!</h1>
-    <script src="{% static 'js/index.js' %}"></script>
-  </body>
-</html>
+{% block title %} Jobs {% endblock %}
+
+{% block content %}
+  
+  {% include "navbar.html" %} 
+  
+  <h1>Welcome to Jobs</h1>
+
+{% endblock %}
