fix register page

--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -10,6 +10,10 @@
 
 <div class="container d-flex justify-content-center align-items-center min-vh-100">
   <div class="row">
+    <h2 class="text-center mb-5">
+      <a href="/" class="text-decoration-none text-light">Jobs</a>
+    </h2>
+
     <div>
 
       <h1 class="text-center">Cadastre-se</h1>
