create perfil page and improve the user info requests.

--- a/frontend/templates/navbar.html
+++ b/frontend/templates/navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="/">Vagas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/portfolios">Link</a>
+          <a class="nav-link" href="/portfolios">Portfolios</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/aplicacoes">Aplicações</a>
@@ -20,8 +20,10 @@
       </ul>
       <div class="" role="search">
         <div class="logged d-none d-flex align-items-center">
-          <span id="username" class="text-light me-3"></span>
-          <img src="" alt="Avatar" class="avatar me-5" id="avatar">
+          <a href="/perfil" class="text-decoration-none">
+            <span class="username text-light me-3"></span>
+            <img src="" alt="Avatar" class="avatar me-5">
+          </a>
           <button class="logout btn btn-dark">Logout</button>
         </div>
 
