--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -4,6 +4,7 @@
 <html data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
+    <link rel="icon" href="{% static '/logo.svg' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>{% block title %}{% endblock %}</title>
