feat: create vacancy view and register pages.

--- a/frontend/static/css/styles.css
+++ b/frontend/static/css/styles.css
@@ -9,3 +9,9 @@ html {
   height: 38px;
   border-radius: 50%;
 }
+
+.benefit + .benefit,
+.responsibility + .responsibility,
+.requirement + .requirement {
+  margin-top: 1rem;
+}
