--- a/frontend/templates/navbar.html
+++ b/frontend/templates/navbar.html
@@ -8,8 +8,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item" user>
           <a class="nav-link" href="/">Vagas</a>
+        </li>
+        <li class="nav-item dropdown d-none" user-company>
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Vagas
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="/">Vagas</a></li>
+            <li><a class="dropdown-item" href="/cadastrar-vaga">Cadastrar vaga</a></li>
+          </ul>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/portfolios">Portfolios</a>
