--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,11 +1,66 @@
 {% extends "base.html" %} 
 
+{% load static %}
+
 {% block title %} Jobs {% endblock %}
 
 {% block content %}
   
   {% include "navbar.html" %} 
   
-  <h1>Welcome to Jobs</h1>
+  <div class="container d-flex justify-content-center p-4 min-vh-100">
+    <div class="row vacancies gap-3" style="height: min-content;">
+      <div class="card p-0 d-none vacancie-template" style="height: max-content;">
+        <h5 class="card-header d-flex gap-3 justify-content-between align-items-center">
+          <p class="title mb-0"></p>
+          <div>
+            <span class="username-company text-light me-3"></span>
+            <img src="" alt="Avatar" class="avatar">
+          </div>
+        </h5>
+        <div class="card-body">
+          <div class="card-body d-flex flex-column">
+            <p class="card-text description"></p>
+            <h6>Responsabilidades</h6>
+            <ul class="responsibilities"></ul>
+
+            <h6>Requerimentos</h6>
+            <ul class="requirements"></ul>
+
+            <h6>Benefícios</h6>
+            <ul class="benefits"></ul>
+
+            <button type="button" class="btn btn-primary apply" user style="margin-left: auto;">Aplicar</button>
+          </div>
+        </div>
+        <div class="card-footer text-body-secondary">
+          <div class="d-flex justify-content-end" style="width: 100%;">
+            <div class="created_at"></div>
+            <div class="mx-3"> · </div>
+            <div class="applications"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="apply-modal" tabindex="-1">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title"></h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <p></p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <script src="{% static 'js/jobs.js' %}"></script>
 
 {% endblock %}
