--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} 
 {% load static %}
-{% block titulo %} 
+{% block title %} 
   Jobs - Login 
 {% endblock %}
 
@@ -32,7 +32,7 @@
         </div>
 
         <div class="d-flex justify-content-center">
-          <a href="/register" class="btn btn-secondary">Cadastro</a>
+          <a href="/register" class="btn btn-link text-light">Cadastro</a>
         </div>
       </form>
 
