--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %} 
 {% load static %}
-{% block titulo %} 
+
+{% block title %} 
   Jobs - Cadastro 
 {% endblock %}
 
@@ -58,7 +59,7 @@
           </div>
 
           <div class="d-flex justify-content-center">
-            <a href="/login" class="btn btn-secondary">Login</a>
+            <a href="/login" class="btn btn-link text-light">Login</a>
           </div>
       </form>
 
