--- a/frontend/templates/perfil.html
+++ b/frontend/templates/perfil.html
@@ -30,7 +30,7 @@
             </div>
   
             <div class="mb-3">
-              <label for="user_type" class="form-label">Type:</label>
+              <label for="user_type" class="form-label">Tipo de usuario:</label>
               <select id="user_type" name="user_type" class="form-select" disabled>
                 <option value="user">User</option>
                 <option value="company">Empresa</option>
