--- a/frontend/templates/register.html
+++ b/frontend/templates/register.html
@@ -24,34 +24,52 @@
           <div class="mb-3">
             <label for="username" class="form-label">Usuario:</label>
             <input type="text" id="username" name="username" class="form-control" required>
+            <div class="invalid-feedback">
+              Preencha o username.
+            </div>
           </div>
           
           <div class="mb-3">
             <label for="email" class="form-label">Email:</label>
             <input type="email" id="email" name="email" class="form-control" required>
+            <div class="invalid-feedback">
+              Preencha um email valido.
+            </div>
           </div>
           
           <div class="mb-3">
             <label for="name" class="form-label">Nome:</label>
             <input type="text" id="name" name="name" class="form-control" required>
+            <div class="invalid-feedback">
+              Preencha o nome.
+            </div>
           </div>
           
           <div class="mb-3">
             <label for="avatar" class="form-label">Avatar:</label>
-            <input type="file" id="avatar" name="avatar" class="form-control">
+            <input type="file" id="avatar" name="avatar" class="form-control" required>
+            <div class="invalid-feedback">
+              Escolha uma imagem para o avatar.
+            </div>
           </div>
 
           <div class="mb-3">
-            <label for="user_type" class="form-label">Type:</label>
+            <label for="user_type" class="form-label">Tipo de usuario:</label>
             <select id="user_type" name="user_type" class="form-select">
               <option value="user" selected>User</option>
               <option value="company">Empresa</option>
-            </select>  
+            </select>
+            <div class="invalid-feedback">
+              Preencha o tipo de usuario.
+            </div>
           </div>
           
           <div class="mb-3">
             <label for="password" class="form-label">Senha:</label>
             <input type="password" id="password" name="password" class="form-control" required>
+            <div class="invalid-feedback">
+              Preencha a senha.
+            </div>
           </div>
           
           <div class="mb-3 d-flex justify-content-center">
