--- a/frontend/templates/editPortfolio.html
+++ b/frontend/templates/editPortfolio.html
@@ -66,7 +66,7 @@
               </div>
             </div>
         </div>
-        <button type="button" class="btn btn-secondary mb-4 add-project">Adicionar Skill</button>
+        <button type="button" class="btn btn-secondary mb-4 add-project">Adicionar Projeto</button>
 
         <div class="mb-3 d-flex justify-content-center">
           <button type="submit" class="btn btn-primary">Confirmar</button>
